# duckmuxpeg

./: .gitignore  CMakeLists.txt  COMMANDS.md  FEATURES.md  README.md  build.sh  install.sh
config/: duckmuxpeg.conf
scripts/: pull-libav.sh
src/: main.cpp
src/broadcast/: ATSCCompliance.cpp  ATSCCompliance.h  CMakeLists.txt  TSDuckIntegration.cpp  TSDuckIntegration.h
src/common/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  Config.cpp  Config.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
src/encoder/: CMakeLists.txt  LookaheadAnalyzer.h  ModernMPEG2Encoder.cpp  ModernMPEG2Encoder.h  ParallelEncoder.h  RAMBufferManager.h
src/obs-plugin/: CMakeLists.txt  OBSOutputPlugin.cpp  OBSOutputPlugin.h  OBSSceneMonitor.cpp  OBSSceneMonitor.h  OBSStatMuxOutput.cpp  OBSStatMuxOutput.h  OBSWebSocketClient.cpp  OBSWebSocketClient.h
src/obs-ui/: AdvancedBroadcastUI.cpp  AdvancedBroadcastUI.h  BroadcastComplianceUI.cpp  BroadcastComplianceUI.h  CMakeLists.txt
src/statmux/: BitrateController.cpp  BitrateController.h  CMakeLists.txt  InputHandler.cpp  InputHandler.h  LiveSourceScheduler.cpp  LiveSourceScheduler.h  OutputHandler.cpp  OutputHandler.h  PlatformManager.cpp  PlatformManager.h  PlaylistManager.cpp  PlaylistManager.h  QualityAnalyzer.cpp  QualityAnalyzer.h  StatMuxEngine.cpp  StatMuxEngine.h  StreamProcessor.cpp  StreamProcessor.h  TrafficAccountant.cpp  TrafficAccountant.h  TransportStream.cpp  TransportStream.h
web-interface/: INTERFACE_SUMMARY.md  README.md  index.html  package.json  start-interface.sh  tsconfig.json  vite.config.ts
web-interface/src/: App.tsx
web-interface/src/components/: AdvancedButton.tsx  DemoShowcase.tsx  MatrixCanvas.tsx  QuantumInterface.tsx  SpacescapeBackground.tsx
web-interface/src/store/: matrixStore.ts
web-interface/src/styles/: globals.scss
web-interface/src/types/: matrix.ts
wyat/: __init__.py  app.py  computer_vision.py  database_manager.py  obs_integration.py  playlist.py  render_mask.py  scene_detection.py
